--- a/man-socios.properties
+++ b/man-socios.properties
@@ -1,2 +1,11 @@
 server.port=9081
 configuracion.texto=Configurando ambiente por defecto
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
